deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: otus-1-5-srv
spec:
    selector:
        app: otus-1-5-app
    ports:
      - protocol: TCP
        port: 9000
        targetPort: web
    type: NodePort
