deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: otus-1-5-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
    rules:
    - host: arch.homework
      http:
        paths:
        - path: /otusapp($|/)kriachko($|/)(.*)
          backend:
            serviceName: otus-1-5-srv
            servicePort: 9000
